app/assets/stylesheets/_common.css.scss
/* ... */
#main_navigation {
  width: 100%;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;

  #banner {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 0 auto;
    width: 95%;
    align-items: center;
    #name_wrapper {
      display: block;
      #name {
        max-height: 83px;
        margin: 0 auto;
        display: block;
      }
    }
    .social-media, .fa-bars, #name_wrapper {
      flex-grow: 1;
      flex-basis: 0;
    }
    .fa-bars:hover {
      cursor: pointer;
    }
    .fa {
      font-size: 20px;
    }
    .fa-twitter {
      color: #00aced;
    }
    .fa-instagram {
      color: #3f729b;
    }
    .fa-pinterest {
      color: #cb2027;
    }
    .fa-facebook-official {
      color: #3b5998;
    }
  }

  .nav-title {
    font-family: 'justwaitandsee';
    font-size: 1.4rem;
    font-style: italic;
    color: #65B19D;
  }

  nav {
    position: relative;
    display: block;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: 54px;
    margin-left: auto;
    margin-right: auto;

    .link {
      margin: 2px 0 0 1.2rem;
    }

    a {
      font-family: 'Univers-CnUlt', Arial, Sans-serif;
      text-transform: uppercase;
      letter-spacing: 0.01rem;
      line-height: 1;
      font-size: 0.8rem;
      font-weight: bolder;
      padding-top: 20px;
      color: black;
      text-decoration: none;
      color: 1;
      -webkit-transition: color 0.4s ease-out;
      -moz-transition: color 0.4s ease-out;
      -o-transition: color .4s ease-out;
      transition: color .4s ease-out;
      &:hover {
        color: #2B6860;
      }
    }
  }
}

#page_title {
  text-align: center;
  border-bottom: 1px solid #E9E9E9;
  padding: 3em 0;
  font-size: 1rem;
  text-transform: uppercase;
}

input[type="text"], input[type="email"], input[type="password"], textarea {
  width: 100%;
  max-width: 100%;
  height: 3em;
  border: 2px solid #E9E9E9;
  padding: 0.7em;
  outline: none;
  margin: .5em 0 2em 0;
}

textarea {
  min-height: 20em;
}

input[type="submit"] {
  outline: none;
  background: transparent;
  border: 2px solid #E9E9E9;
  text-align: center;
  font-size: 1em;
  color: #424653;
  text-decoration: none;
  padding: 1em 2em;
  margin-bottom: 2em;
  &:hover {
    border: 2px solid #65B19D;
    color: #65B19D;
  }
}

h1 {
  font-size: 2.5rem;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.75rem;
}

h4 {
  font-size: 1.375rem;
}

h5 {
  font-size: 1.25rem;
}

h6 {
  font-size: 1rem;
}

p, li {
  font-size: 1.1rem;
  line-height: 1.75;
}

p, ul, ol {
  margin: 0.8em 0;
}

@media (max-width: 1000px) {
  .flex_wrapper_columns {
    flex-direction: column !important;
    .share_article_feedback {
      margin-top: 30px !important;
    }
    .post_apply, .share_article_feedback {
      margin: 0;
      padding: 0 40px;
      min-width: 100% !important;
      max-width: 100% !important;
    }
    .post_apply .ads_wrapper, iframe {
      margin: 0 !important;
    }
  }
  .parentflex {
    flex-direction: column;
    .flexbox {
      width: 100%;
      max-width: 100%;
    }
  }
}

@media (max-width: 1100px) {
  .parentflex {
    flex-direction: column;
  }
  .divfeatured {
    width: 50%;
    .individual {
      width: 100%;
      display: flex;
      flex-direction: column;

      img {
        width: 100%;
      }

      .article_title {
        margin: 0 auto;
      }
    }
  }

  .signupdiv {
    width: 100%;
    margin: 0;
    .container {
      background-color: #66B39F;
      max-width: 100%;
      height: fit-content;
      padding: 20px;
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      .exclusive-offer {
        width: 50%;
        background-image: url();
        margin-right: 10px;
        height: auto;
        .exclusive-title, #exclusive-title--id {
          margin: 0 auto;
          width: fit-content;
        }
      }
      .signup {
        width: 50%;
        color: white !important;
        max-width: 400px;
        margin: 0 auto;
        #mc_embed_signup_scroll {
          h2 {
            display: none;
          }
          .flex--email {
            display: flex;
            flex-direction: row;
            justify-content: center;
            #mc-embedded-subscribe {
              margin: 0 5px !important;
              height: 35px !important;
              font-size: 15px !important;
            }
          }
          #mce-responses-container {
            * {
              color: white !important;
            }
          }
        }
      }
    }
  }
}

@media (max-width: 954px) {
  .social {
    display: none;
  }
}

@media (max-width: 700px) {
  .signupdiv {
    .container {
      flex-direction: column;
      .exclusive-offer, .signup {
        width: 100%;
      }
    }
  }
}
/* ... */

